<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall3"
    tools:context="org.hackathon.activities.AppointmentActivity"
    android:padding="15dp">

    <TextView
        android:id="@+id/appointment_tv_title"
        android:text="@string/appointment"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/appointment_btn_calendar"
        android:text="@string/pick_date"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/appointment_et_symptoms"
        android:layout_below="@id/appointment_tv_date"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:inputType="textMultiLine"
        android:hint="@string/please_write_your_symptoms"
        android:minLines="1"
        android:scrollbars="vertical"
        android:lines="8"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/appointment_tv_date"
        android:layout_below="@id/appointment_btn_calendar"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="askldjfhaskldjfhasdjklfh"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/appointment_btn_create"
        android:text="@string/create_appointment"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
