<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/wall3"
    android:layout_height="match_parent"
    tools:context="org.hackathon.activities.PrescriptionActivity"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/prescription_ll_name"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prescription_tv_title"
            android:text="@string/prescription"
            android:textSize="30sp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/prescription_tv_prescription_id"
            tools:text="4234"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/prescription_ll_time"
        android:layout_below="@id/prescription_ll_name"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prescription_tv_date_label"
            android:text="@string/date_and_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/prescription_tv_date"
            tools:text="24th August 2017 - 14:22"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/prescription_ll_medication"
        android:layout_below="@id/prescription_ll_time"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prescription_tv_medication_label"
            android:text="@string/medication"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/medication_rv"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</RelativeLayout>
